fixed button vertical stretch

--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -28,6 +28,7 @@ main {
 fieldset {
   display: flex;
   flex-wrap: wrap;
+  flex-direction: column;
   a {
     margin: 0 auto;
   }
